creation of the api.yml and modification of some routes
