# api.yml
@@ -8,7 +8,7 @@ info:
   license:
     name: Software Architecture, 2019-I
 host: 127.0.0.1:3001
-basePath: /users/resources
+basePath: /resources
 schemes:
   - http
 consumes:
@@ -16,7 +16,7 @@ consumes:
 produces:
   - application/json
 paths:
-  /users/create:
+  /user/create:
     post:
       summary: Creates a new user
       operationId: createUser
@@ -24,15 +24,14 @@ paths:
         - name: user
           in: body
           required: true
-          description: User Object
+          description: User Object with the correct parameters
           schema:
             $ref: '#/definitions/NewUser'
       responses:
-        '200':
+        '201':
           description: Created
-        '422':
-          description: Unprocessable Entity
-
+        '406':
+          description: Not Acceptable (Invalid Params)
         '500':
           description: Internal Server Error
 
@@ -47,96 +46,106 @@ paths:
             $ref: '#/definitions/UsersList'
         '406':
           description: Not Acceptable (Invalid Params)
-
         '500':
           description: Internal Server Error
 
-  /users/{email}:
+  /user:
     get:
-      summary: Returns a user with the given code
+      summary: Returns a user with the given id
       operationId: getUserByEmail
       parameters:
         - name: email
-          in: path
-          description: The userd with that email to be returned
+          in: body
+          description: The user with that email to be returned
           required: true
-          type: string
+          schema:
+            $ref: '#/definitions/GetUser'
       responses:
         '200':
           description: Ok
           schema:
-            $ref: '#/definitions/User'
-        '404':
-          description: Not Found
-          schema:
-            $ref: '#/definitions/ErrorModel'
+            $ref: '#/definitions/GetUser200'
         '406':
             description: Not Acceptable (Invalid Params)
-            schema:
-              $ref: '#/definitions/ErrorModel'
         '500':
-          description: unexpected error
-          schema:
-            $ref: '#/definitions/ErrorModel'
+          description: Internal Server Error
+
 
     put:
-      summary: Updates a course with the given code
-      operationId: updateCourse
+      summary: Updates a user with the given id
+      operationId: updateUser
       parameters:
-        - name: email
-          in: path
-          description: The code of the course to be updated
-          required: true
-          type: integer
-        - name: course
+        - name: user
           in: body
+          description: Updates user fields by getting the id
           required: true
-          description: Course Object
           schema:
-            $ref: '#/definitions/CourseInput'
+            $ref: '#/definitions/UpdateUser'
       responses:
-        '204':
-          description: No Content
-        '404':
-          description: Not Found
-          schema:
-            $ref: '#/definitions/ErrorModel'
+        '202':
+          description: Aceptable        
         '406':
             description: Not Acceptable (Invalid Params)
-            schema:
-              $ref: '#/definitions/ErrorModel'
+        '403':
+          description: Forbidden
         '500':
-          description: unexpected error
-          schema:
-            $ref: '#/definitions/ErrorModel'
+          description: Internal Server Error
 
     delete:
       summary: Deletes a course with the given code
       operationId: deleteCourse
       parameters:
-        - name: email
-          in: path
-          description: The code of the course to be deleted
+        - name: id
+          in: body
+          description: Delete the user by obtaining the id
           required: true
-          type: integer
+          schema:
+            $ref: '#/definitions/IdUser'
       responses:
         '200':
           description: Ok
         '404':
           description: Not Found
-          schema:
-            $ref: '#/definitions/ErrorModel'
-        '406':
-            description: Not Acceptable (Invalid Params)
-            schema:
-              $ref: '#/definitions/ErrorModel'
+        '403':
+          description: Forbidden
         '500':
-          description: unexpected error
+          description: Internal Server Error
+  
+  /users/login:
+    post:
+      summary: Creates a new user session
+      operationId: createNewUserSession
+      parameters:
+        - name: user
+          in: body
+          required: true
+          description: Log in of the user with the correct parameters
           schema:
-            $ref: '#/definitions/ErrorModel'
+            $ref: '#/definitions/LogInUser'
+      responses:
+        '200':
+          description: Ok
+        '406':
+          description: Not Acceptable (Invalid Params)
+        '404':
+          description: Not found
+        '500':
+          description: Internal Server Error
+
+  /users/logout:
+    delete:
+      summary: Log out of a user session
+      operationId: deleteUserSession
+      responses:
+        '200':
+          description: Ok
+        '400':
+          description: Bad Request
+        '500':
+          description: Internal Server Error
 
 definitions:
- #NewUser
+  #NewUser
   NewUser:
     type: object
     properties:
@@ -153,7 +162,42 @@ definitions:
             type: string
           password_confirmation:
             type: string
-            
+
+  #GetUser
+  GetUser:
+    type: object
+    properties:
+      email:
+        type: string
+
+
+  #IdUser
+  IdUser:
+    type: object
+    properties:
+      id:
+        type: string
+
+  #UpdateUser
+  UpdateUser:
+    type: object
+    properties:
+      user:
+        type: object
+        properties:
+          id:
+            type: string
+          name:
+            type: string
+          last_name:
+            type: string
+          email:
+            type: string
+          password:
+            type: string
+          password_confirmation:
+            type: string
+
   # User
   User:
     type: object
@@ -164,14 +208,19 @@ definitions:
         type: string
       email:
         type: string
-      
-  UserInput:
+
+  # User
+  GetUser200:
     type: object
     properties:
+      id:
+        type: string
       name:
         type: string
-      credits:
-        type: integer
+      last_name:
+        type: string
+      email:
+        type: string
 
   UsersList:
     type: object
@@ -185,6 +234,19 @@ definitions:
         type: array
         items:
           $ref: '#/definitions/User'
+
+  #LogInUser
+  LogInUser:
+    type: object
+    properties:
+      user:
+        type: object
+        properties:
+          email:
+            type: string
+          password:
+            type: string
+
 
 # Errors
   ErrorModel:
@@ -200,4 +262,3 @@ definitions:
         type: string
       password_confirmation:
         type: string
-        
