# app/controllers/users/registrations_controller.rb
@@ -9,62 +9,63 @@ class Users::RegistrationsController < Devise::RegistrationsController
   #   super
   # end
 
-  # POST /resource
-  # def create
-  #   super
-  # end
-
+  # POST /resource/user/create
   def create
-    @user = User.new(user_params)
-    # @user.password = params[:password]
-    # if @user.save
-    # render json: {status: 200, msg: 'User was created.'}
-    # end
-    if @user.save
-        render json: {msg: 'User was created.'} , status: :created
+    user = User.new(user_params)
+    if user.save
+        render json: {}, status: 201
     else
-        render json: @user.errors, status: :unprocessable_entity
+        render json: user.errors, status: 400
     end
   end
 
-   # Setting up strict parameters for when we add account creation.
-    def user_params
-        params.require(:user).permit(:name, :last_name, :email, :password, :password_confirmation)
-    end
   # GET /resource/edit
-  # def edit
-  #   super
-  # end
+  def update
+    user = User.find(params[:id])
+    if user.update(user_params)
+      render json: {msg: 'User details have been updated.' },  status: 200
+    else
+      render json: {msg: 'The user does not exist.' }, status: 406
+    end
+  end
 
   # PUT /resource
   # def update
   #   super
   # end
 
-  def update
-    user = User.find(params[:id])
-    if user.update(user_params)
-      render json: {msg: 'User details have been updated.' },  status: 200
-    end
-  end
-
+  # GET /resource/user
   def show
-    user = User.where(email: params[:email]).take
+    user = User.find_by(email: params[:email])
     if user!=nil
-      render json: { user: { name: user.name, last_name: user.last_name, email: user.email} }, status: :created
+      render json: { user: {id: user.id, name: user.name, last_name: user.last_name, email: user.email} }, status: 200
     else
-      user.errors
+      render json: {msg: 'The user does not exist.' }, status: 406
     end
   end  
 
-  def show2
+  # GET /resource/users
+  def showAll
     user = User.all
-    render json: { user: user.size() }, status: :created
+    render json: { total: user.size(), list: user.select(:name, :last_name, :email).as_json(:except => :id) }, status: 202
   end 
-  # DELETE /resource
-  # def destroy
-  #   super
-  # end
+  
+  # DELETE /resource/user
+  def destroyUser
+    #currUser = current_user
+    #if currUser!=nil
+    user = User.find_by(id: params[:id])
+    
+    # if user.id==currUser.id
+    if user.destroy(user.id)
+      render json: {msg: 'The user was successfully deleted.' },  status: 202
+    else
+      render json: {msg: 'The user does not exist.' }, status: 406
+    end
+    #else
+    #  render json: {msg: 'Is not authenticated.' }, status: 401
+    #end
+  end
 
   # GET /resource/cancel
   # Forces the session data which is usually expired after sign
@@ -85,6 +86,11 @@ class Users::RegistrationsController < Devise::RegistrationsController
   # If you have extra params to permit, append them to the sanitizer.
   def configure_account_update_params
     devise_parameter_sanitizer.permit(:account_update, keys: [:name, :last_name])
+  end
+
+  # Setting up strict parameters for when we add account creation.
+  def user_params
+    params.require(:user).permit(:name, :last_name, :email, :password, :password_confirmation)
   end
 
   # The path used after sign up.
