# config/routes.rb
@@ -1,22 +1,22 @@
 Rails.application.routes.draw do
 	get 'welcome/index'
 	root 'welcome#index'
-	
-
 
 	#devise_for :users, skip: [:sessions, :registrations, :passwords]
 
 	devise_scope :user do
 	  # sessions
+	  post   'users/login',  to: 'users/sessions#create'
 	  #get    'login',  to: 'devise/sessions#new',     as: :new_user_session
 	  #post   'login',  to: 'devise/sessions#create',  as: :user_session
 	  #delete 'logout', to: 'devise/sessions#destroy', as: :destroy_user_session
 	  # registrations
 	  #put    '/account',  to: 'devise/registrations#update'
 	  #delete '/account',  to: 'devise/registrations#destroy'
-	  post   '/users/create',  to: 'users/registrations#create'
+	  post   '/user/create',  to: 'users/registrations#create'
 	  get   '/user',  to: 'users/registrations#show'
-	  get   '/userall',  to: 'users/registrations#show2'
+	  get   '/users',  to: 'users/registrations#showAll'
+	  delete '/user',  to: 'users/registrations#destroyUser'
 	  #get    '/register', to: 'devise/registrations#new',    as: :new_user_registration
 	  #get    '/account',  to: 'devise/registrations#edit',   as: :edit_user_registration
 	  #patch  '/account',  to: 'devise/registrations#update', as: :user_registration
